src/objects/Occasion__c.object
<CustomObject>
    <description>Calendar object to represent holidays, local events, and other non-concert or competitive activity</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OccasionDate__c</fullName>
        <label>Occasion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OccasionEndDate__c</fullName>
        <label>Occasion End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OccasionName__c</fullName>
        <label>Occasion Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Venue not found or does not match filter criteria</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Venue</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Occasions</relationshipLabel>
        <relationshipName>Occasions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Occasion</label>
    <nameField>
        <displayFormat>Occ-{000000}</displayFormat>
        <label>Occasion ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Occasions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>